[package]
name = "shredstream-decoder"
version = "0.1.1"
edition = "2024"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
lto = false
opt-level = 3
codegen-units = 1
debug = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
bincode = "1.3.3"
reed-solomon-erasure = "6.0.0"
borsh = "1.5.3"
serde_json = "1.0.133"
serde = "1.0.215"
sha2 = "0.10.8"
spl-token = "7.0.0"
solana-client = "2.1.4"
solana-sdk = "2.1.4"
solana-entry = "2.1.4"
solana-ledger = "2.1.4"
bs58 = "0.5.1"
hex = "0.4.3"
chrono = "0.4.38"
rustc-hash = "2.1.0"
ring = "0.17.8"
lazy_static = "1.5.0"
rayon = "1.10.0"
dotenv = "0.15.0"
crossbeam = "0.8.4"
thiserror = "2.0.7"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = "0.4.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-core = "0.3.31"
libc = "0.2.169"
env_logger = "0.11.6"
num_cpus = "1.16.0"
yellowstone-grpc-proto = "4.1.1"
tonic = "0.12.3"
prost = "0.13.4"
futures = "0.3.31"
maplit = "1.0.2"
yellowstone-grpc-client = "4.1.0"
json = "0.12.4"
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
mimallocator = "0.1.3"